# nxmw

./: .gitmodules  CMakeLists.txt  ChangeLog.md  README.md  SBOM.spdx.json  SCR.txt
boards/frdmmcxa156/: CMakeLists.txt  board.c  board.h  clock_config.c  clock_config.h  i2c_frdmmcxa156.c  pin_mux.c  pin_mux.h  platform_frdmmcxa156.c
boards/frdmmcxa156/usb_vcom/: usb_device_board_config.h
boards/frdmmcxn947/: CMakeLists.txt  board.c  board.h  clock_config.c  clock_config.h  i2c_frdmmcxn947.c  pin_mux.c  pin_mux.h  platform_frdmmcxn947.c
boards/frdmmcxn947/freertos/: FreeRTOSConfig.h  aws_mqtt_config.h  lwipopts.h
boards/frdmmcxn947/linker/: MCXN947_flash.ld
boards/frdmmcxn947/usb_vcom/: usb_device_board_config.h
boards/lpcxpresso55s69/: CMakeLists.txt  board.c  board.h  clock_config.c  clock_config.h  i2c_lpcxpresso55s69.c  pin_mux.c  pin_mux.h  platform_lpcxpresso55s69.c
boards/lpcxpresso55s69/freertos/: FreeRTOSConfig.h  app.h
demos/: CMakeLists.txt
demos/ksdk/: CMakeLists.txt
demos/ksdk/aws_jitr/: CMakeLists.txt  aws_client_credential_keys.h  aws_jitr_demo_Main_lwip.c  aws_jitr_task_lwip.c  common_cloud_config.h  iot_default_root_certificates.h  ledHandler.c  ledHandler.h  readme.md
demos/ksdk/provisioning/: CMakeLists.txt  provisioning.c  provisioning.h  provisioning_aws.c  readme.md
demos/linux/aws/: SampleConfig.json  buildScript.sh  readme.md  sssProvider_Updates.patch
demos/linux/common/: openssl30_sss_nx.cnf  openssl_sss_nx.cnf
demos/linux/nx_access_manager/: CMakeLists.txt  readme.md
demos/nx/: CMakeLists.txt
demos/nx/cert_access_right/: CMakeLists.txt  ex_cert_ar_common.h
demos/nx/cert_cache/: CMakeLists.txt  README.md  ex_sss_cert_cache.c  ex_sss_cert_cache.h
demos/nx/cert_repo/: CMakeLists.txt  ex_sss_cert_repo.c  readme.md
demos/nx/cmac_using_slots/: CMakeLists.txt  ex_nx_cmac_using_slots.c  readme.md
demos/nx/counter_file/: CMakeLists.txt  ex_sss_counter_file.c  readme.md
demos/nx/diversify_key_perso/: CMakeLists.txt  diversify_key_perso.c  diversify_key_perso.h  readme.md
demos/nx/dual_interfaces/: CMakeLists.txt  ex_dual_interfaces.c  readme.md
demos/nx/ecc/: CMakeLists.txt  ex_sss_ecc.c  readme.md
demos/nx/ecc_standalone/: CMakeLists.txt  ex_sss_ecc_standalone.c  readme.md
demos/nx/ecdh/: CMakeLists.txt  ex_sss_ecdh.c  readme.md
demos/nx/fileMgnt/: CMakeLists.txt  ex_sss_file_mgnt.c  readme.md
demos/nx/getCardUID/: CMakeLists.txt  ex_sss_get_uid.c  readme.md
demos/nx/getConfig/: CMakeLists.txt  ex_sss_get_config.c  readme.md
demos/nx/getVersion/: CMakeLists.txt  ex_sss_get_version.c  out_ex_get_version.rst.txt  readme.md
demos/nx/gpio/: CMakeLists.txt  ex_sss_gpio.c  readme.md
demos/nx/gpio_notif/: CMakeLists.txt  ex_sss_gpio_notif.c  ex_sss_gpio_notif.h  readme.md
demos/nx/hkdf/: CMakeLists.txt  ex_sss_hkdf.c  readme.md
demos/nx/hmac/: CMakeLists.txt  ex_sss_hmac.c  readme.md
demos/nx/host_coprocessor/: CMakeLists.txt  host_copro_nx_apdu.c  host_copro_nx_apdu.h  host_copro_txn.c  host_copro_txn.h  host_copro_utils.c  host_copro_utils.h  host_coprocessor.c  host_coprocessor.h  readme.md
demos/nx/mbedtls_3_x_alt/: CMakeLists.txt  ex_mbedtls_3_x_alt.c  ex_mbedtls_3_x_alt.h  readme.md
demos/nx/mbedtls_3_x_lwip_client/: CMakeLists.txt  ecc_keys.h  ex_sss_ssl2.c  ex_sss_ssl2.h  readme.md
demos/nx/md/: CMakeLists.txt  ex_sss_md.c  readme.md
demos/nx/md_using_slots/: CMakeLists.txt  ex_nx_md_using_slots.c  readme.md
demos/nx/multiple_sessions/: CMakeLists.txt  ex_sss_multiple_sessions.c  readme.md
demos/nx/multiple_symm_auth/: CMakeLists.txt  ex_multiple_symm_auth.c  ex_multiple_symm_auth.h  readme.md
demos/nx/nx_Minimal/: CMakeLists.txt  nx_Minimal.c  readme.md
demos/nx/nx_Personalization/: CMakeLists.txt  nx_Personalization.c  nx_Personalization.h  nx_Personalization_default.c  nx_Personalization_fs.c  nx_Personalization_helpers.c  nx_Personalization_mgncertrepo.c  readme.md
demos/nx/nx_cli_tool/: CMakeLists.txt  nx_cli_tool.c  nx_cli_tool_common.h  nx_cli_tool_connect.h  nx_cli_tool_ecdh.h  nx_cli_tool_ecdsa.h  nx_cli_tool_el2go_json_parser.h  nx_cli_tool_get_ref_key.h  nx_cli_tool_get_uid.h  nx_cli_tool_keygen.h  nx_cli_tool_mng_crt_repo.h  nx_cli_tool_rng.h  nx_cli_tool_set_cert_mgnt.h  nx_cli_tool_set_get_bin.h  nx_cli_tool_set_i2c_mgnt.h  nx_cli_tool_set_key.h  nx_cli_tool_sha.h  nx_cli_tool_update_eccpolicy.h  readme.md
demos/nx/nx_deep_pwr_down/: CMakeLists.txt  nx_deep_pwr_down.c  readme.md
demos/nx/nx_release_req_cmd/: CMakeLists.txt  nx_release_req_cmd.c  readme.md
demos/nx/nx_tool_setconfig/: CMakeLists.txt  nx_tool_setconfig.c  nx_tool_setconfig.h  readme.md
demos/nx/originality_check/: CMakeLists.txt  ex_sss_originality_check.c  ex_sss_originality_check.h  out_ex_originality_check.rst.txt  readme.md
demos/nx/rng/: CMakeLists.txt  ex_sss_rng.c  readme.md
demos/nx/sa_qi/: CMakeLists.txt  readme.md
demos/nx/sdm/: CMakeLists.txt  ex_sdm_common.h
demos/nx/setConfig/: CMakeLists.txt  ex_sss_set_config.c  ex_sss_set_config.h  readme.md
demos/nx/symmetric/: CMakeLists.txt  ex_sss_symmetric.c  readme.md
demos/nx/tls_client/: readme.md
demos/nx/update_key/: CMakeLists.txt  ex_sss_update_key.c  readme.md
demos/nx/usb_c/: CMakeLists.txt  Readme.md  usb_c_common.h
demos/nx/vcom/: readme.md
lib/hostlib/: CMakeLists.txt
lib/hostlib/nx_apdu/: CMakeLists.txt
lib/hostlib/nx_log/: CMakeLists.txt  nxLog.c  nxLog.h  nxLog_Config.h  nxLog_msg.h  nx_printf.h
lib/hostlib/nx_utils/: app_boot.h  (+10 more)
lib/sss/: CMakeLists.txt
plugin/: CMakeLists.txt
plugin/mbedtls3x/: aes_alt.c  ctr_drbg_alt.c  ecdh_alt.c  ecdsa_sign_alt.c  ecdsa_verify_alt.c  mbedtls_sss_alt_config.h  readme.md
plugin/openssl/: CMakeLists.txt  readme.md
plugin/openssl_provider/: CMakeLists.txt  readme.md
plugin/pkcs11/: CMakeLists.txt  base64_decode.c  readme.md  sss_pkcs11.c  sss_pkcs11_pal.h  sss_pkcs11_pal_asymm.c  sss_pkcs11_pal_core.c  sss_pkcs11_pal_helpers.c  sss_pkcs11_pal_object.c  sss_pkcs11_pal_symm.c  sss_pkcs11_utils.c  sss_pkcs11_utils.h
plugin/psa/: CMakeLists.txt  README.md
(+828 files in other folders)
