#
# Copyright 2022-2024 NXP
# SPDX-License-Identifier: BSD-3-Clause
#
#

ADD_SUBDIRECTORY(nx)

IF(SSS_HAVE_HOSTCRYPTO_OPENSSL AND (SSS_HAVE_NX_TYPE) AND SSS_HAVE_HOST_LINUX_LIKE)
    ADD_SUBDIRECTORY(linux/aws/aws_provisioning_client)
ENDIF()

IF ((SSS_HAVE_HOST_PCLINUX64 OR SSS_HAVE_HOST_RASPBIAN)
    AND NOT (SSS_HAVE_SMCOM_PCSC OR SSS_HAVE_SMCOM_JRCP_V1_AM)
)
    IF (SSS_HAVE_NX_TYPE AND NOT SSS_HAVE_NX_TYPE_NX_PICC)
        ADD_SUBDIRECTORY(linux/nx_access_manager)
    ENDIF()
ENDIF()
