# Copyright 2023-2024 NXP
#
# SPDX-License-Identifier: BSD-3-Clause
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.5.0)


IF(SSS_HAVE_NX_TYPE)
    
IF(SSS_HAVE_KSDK)
#No mbedtls client server examples to be added
ELSE()
    IF(SSS_HAVE_HOST_PCWINDOWS AND SSS_HAVE_HOSTCRYPTO_MBEDTLS AND SSS_HAVE_MBEDTLS_3_X AND SSS_HAVE_MBEDTLS_ALT_SSS)
        ADD_SUBDIRECTORY(mbedtls3x/ex/client)
    ENDIF()
    IF(SSS_HAVE_HOST_PCWINDOWS AND SSS_HAVE_HOSTCRYPTO_MBEDTLS AND SSS_HAVE_MBEDTLS_3_X AND (NOT SSS_HAVE_MBEDTLS_ALT_SSS))
        ADD_SUBDIRECTORY(mbedtls3x/ex/server)
    ENDIF()
ENDIF()

    IF(SSS_HAVE_HOSTCRYPTO_OPENSSL)
        IF(SSS_HAVE_OPENSSL_1_1_1)
            ADD_SUBDIRECTORY(openssl)
        ELSE()
            ADD_SUBDIRECTORY(openssl_provider)
        ENDIF()
    ENDIF()

    IF (SSS_HAVE_AUTH_SIGMA_I_VERIFIER OR SSS_HAVE_AUTH_SIGMA_I_PROVER OR SSS_HAVE_AUTH_SYMM_AUTH)
        IF(SSS_HAVE_HOSTCRYPTO_MBEDTLS AND SSS_HAVE_MBEDTLS_ALT_PSA)
            IF(SSS_HAVE_HOST_PCWINDOWS OR SSS_HAVE_HOST_LPCXPRESSO55S)
                ADD_SUBDIRECTORY(psa)
            ENDIF()
        ENDIF()
    ENDIF()

    IF(SSS_HAVE_HOST_LINUX_LIKE)
        ADD_SUBDIRECTORY(pkcs11)
    ENDIF()
ENDIF()
