#
# Copyright 2023 NXP
# SPDX-License-Identifier: BSD-3-Clause
#

IF (SSS_HAVE_AUTH_SYMM_AUTH OR SSS_HAVE_AUTH_SIGMA_I_VERIFIER OR SSS_HAVE_AUTH_SIGMA_I_PROVER)
    ADD_SUBDIRECTORY(ex_cert_ar_provision)

    IF (SSS_HAVE_AUTH_SIGMA_I_VERIFIER OR SSS_HAVE_AUTH_SIGMA_I_PROVER)
        ADD_SUBDIRECTORY(ex_cert_ar_file_op)
    ENDIF()
ENDIF()
